2019-08-06  Mathieu Desnoyers <mathieu.desnoyers@efficios.com>

	* support/Makefile: Add xpthread_key_create and xpthread_key_delete.
	* support/xthread.h: Add prototype for xpthread_key_create and
	xpthread_key_delete.
	* support/xpthread_key_create.c: New file.
	* support/xpthread_key_delete.c: New file.

2019-08-06  Mathieu Desnoyers <mathieu.desnoyers@efficios.com>

	* sysdeps/unix/sysv/linux/sched_getcpu.c: use rseq cpu_id TLS on
	Linux.

2019-08-06  Mathieu Desnoyers <mathieu.desnoyers@efficios.com>

	* NEWS: Add Restartable Sequences feature description.
	* csu/libc-start.c: Perform rseq(2) registration at C startup.
	* elf/rtld.c: Initialize __rseq_handled at dynamic linker
	startup for shared libc.
	* elf/dl-support.c: Initialize __rseq_handled at dynamic linker
	startup for static libc.
	* nptl/pthread_create.c: Perform rseq(2) registration at thread
	creation, unregistration at thread exit.
	* sysdeps/unix/sysv/linux/Makefile: Add rseq-sym, sys/rseq.h,
	bits/rseq.h.
	* sysdeps/unix/sysv/linux/Versions: Export __rseq_abi from libc
	and __rseq_handled from ld.
	* sysdeps/unix/sysv/linux/aarch64/ld.abilist: Likewise.
	* sysdeps/unix/sysv/linux/aarch64/libc.abilist: Likewise.
	* sysdeps/unix/sysv/linux/alpha/ld.abilist: Likewise.
	* sysdeps/unix/sysv/linux/alpha/libc.abilist: Likewise.
	* sysdeps/unix/sysv/linux/arm/ld.abilist: Likewise.
	* sysdeps/unix/sysv/linux/arm/libc.abilist: Likewise.
	* sysdeps/unix/sysv/linux/csky/ld.abilist: Likewise.
	* sysdeps/unix/sysv/linux/csky/libc.abilist: Likewise.
	* sysdeps/unix/sysv/linux/hppa/ld.abilist: Likewise.
	* sysdeps/unix/sysv/linux/hppa/libc.abilist: Likewise.
	* sysdeps/unix/sysv/linux/i386/ld.abilist: Likewise.
	* sysdeps/unix/sysv/linux/i386/libc.abilist: Likewise.
	* sysdeps/unix/sysv/linux/ia64/ld.abilist: Likewise.
	* sysdeps/unix/sysv/linux/ia64/libc.abilist: Likewise.
	* sysdeps/unix/sysv/linux/m68k/coldfire/ld.abilist: Likewise.
	* sysdeps/unix/sysv/linux/m68k/coldfire/libc.abilist: Likewise.