@@ -1,5 +1,11 @@
 2019-08-06  Mathieu Desnoyers <mathieu.desnoyers@efficios.com>
 
+	* sysdeps/unix/sysv/linux/Makefile: Add tst-rseq and tst-rseq-nptl.
+	* sysdeps/unix/sysv/linux/tst-rseq-nptl.c: New file.
+	* sysdeps/unix/sysv/linux/tst-rseq.c: Likewise.
+
+2019-08-06  Mathieu Desnoyers <mathieu.desnoyers@efficios.com>
+
 	* support/Makefile: Add xpthread_key_create and xpthread_key_delete.
 	* support/xthread.h: Add prototype for xpthread_key_create and
 	xpthread_key_delete.
